gcc/testsuite/rust/rustc/ui/imports/issue-57539.rs
// edition:2018

mod core {
    use core; // { dg-error ".E0659." "" { target *-*-* } }
    use crate::*;
}

fn main() {}

